# Computer-Graphics

./: README.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/code/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.hpp
Assignment1/code_my/: Triangle.cpp  Triangle.hpp  camera.hpp  main.cpp  rasterization.cpp  rasterization.hpp  utility.hpp
Assignment2/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment2/code_my/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterization.cpp  rasterization.hpp
Assignment3/Code/: CMakeLists.txt  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  main.cpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
